# MR-RATE

./: .gitignore  README.md
.github/workflows/: tests.yml
contrastive-pretraining/: README.md
data-preprocessing/: README.md  environment.yml  pyproject.toml
data-preprocessing/docs/: dataset_guide.md
data-preprocessing/run/: run_mri_preprocessing.py  run_mri_upload.py  utils.py
data-preprocessing/run/configs/: mri_batch00.yaml
data-preprocessing/scripts/hf/: download.py  merge_downloaded_repos.py
data-preprocessing/src/mr_rate_preprocessing/configs/: config_metadata_columns.json  config_mri_preprocessing.py
data-preprocessing/src/mr_rate_preprocessing/mri_preprocessing/: brain_segmentation_and_defacing.py  dcm2nii.py  hdbet.py  modality_filtering.py  pacs_metadata_filtering.py  prepare_metadata.py  quickshear.py  series_classification.py  utils.py  zip_and_upload.py
data-preprocessing/src/mr_rate_preprocessing/registration/: registration.py  upload.py
